changed Group model to return multiple Options
